@@ -17,15 +17,24 @@
  */
 package de.erdesignerng.visual.common;
 
+import java.awt.Component;
+import java.awt.Dimension;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.text.MessageFormat;
+import java.util.ArrayList;
+import java.util.List;
 
 import de.erdesignerng.dialect.JDBCReverseEngineeringStrategy;
 import de.erdesignerng.dialect.ReverseEngineeringNotifier;
 import de.erdesignerng.dialect.ReverseEngineeringOptions;
 import de.erdesignerng.model.Model;
+import de.erdesignerng.model.ModelItem;
+import de.erdesignerng.model.Table;
+import de.erdesignerng.model.View;
 import de.erdesignerng.visual.LongRunningTask;
+import de.erdesignerng.visual.cells.views.TableCellView;
+import de.erdesignerng.visual.cells.views.ViewCellView;
 import de.erdesignerng.visual.editor.DialogConstants;
 import de.erdesignerng.visual.editor.reverseengineer.ReverseEngineerEditor;
 import de.erdesignerng.visual.editor.reverseengineer.TablesSelectEditor;
@@ -35,16 +44,17 @@ public class ReverseEngineerCommand extends UICommand {
     public ReverseEngineerCommand(ERDesignerComponent aComponent) {
         super(aComponent);
     }
-    
+
     @Override
     public void execute() {
         if (!component.checkForValidConnection()) {
             return;
         }
-        
+
         final Model theModel = component.getModel();
-        
-        final ReverseEngineerEditor theEditor = new ReverseEngineerEditor(theModel, getDetailComponent(), getPreferences());
+
+        final ReverseEngineerEditor theEditor = new ReverseEngineerEditor(theModel, getDetailComponent(),
+                getPreferences());
         if (theEditor.showModal() == DialogConstants.MODAL_RESULT_OK) {
 
             component.setIntelligentLayoutEnabled(false);
@@ -55,7 +65,8 @@ public class ReverseEngineerCommand extends UICommand {
                 if (theConnection == null) {
                     return;
                 }
-                final JDBCReverseEngineeringStrategy theStrategy = theModel.getDialect().getReverseEngineeringStrategy();
+                final JDBCReverseEngineeringStrategy theStrategy = theModel.getDialect()
+                        .getReverseEngineeringStrategy();
 
                 LongRunningTask<ReverseEngineeringOptions> theRETask = new LongRunningTask<ReverseEngineeringOptions>(
                         getWorldConnector()) {
@@ -80,8 +91,8 @@ public class ReverseEngineerCommand extends UICommand {
                                     ReverseEngineeringNotifier theNotifier = new ReverseEngineeringNotifier() {
 
                                         public void notifyMessage(String aResourceKey, String... aValues) {
-                                            String theMessage = MessageFormat.format(component.getResourceHelper().getText(
-                                                    aResourceKey), (Object[]) aValues);
+                                            String theMessage = MessageFormat.format(component.getResourceHelper()
+                                                    .getText(aResourceKey), (Object[]) aValues);
                                             aPublisher.publishMessage(theMessage);
                                         }
 
@@ -89,6 +100,42 @@ public class ReverseEngineerCommand extends UICommand {
 
                                     theStrategy.updateModelFromConnection(theModel, getWorldConnector(), theConnection,
                                             aResult, theNotifier);
+
+                                    // Iterate over the views and the tables and
+                                    // order them in a matrix like position
+                                    List<ModelItem> theItems = new ArrayList<ModelItem>();
+                                    theItems.addAll(theModel.getTables());
+                                    theItems.addAll(theModel.getViews());
+                                    int xoffset = 20;
+                                    int yoffset = 20;
+                                    int xcounter = 0;
+                                    int maxheight = Integer.MIN_VALUE;
+                                    for (ModelItem theItem : theItems) {
+                                        Component theComponent = null;
+                                        if (theItem instanceof Table) {
+                                            theComponent = new TableCellView.MyRenderer()
+                                                    .getRendererComponent((Table) theItem);
+                                        }
+                                        if (theItem instanceof View) {
+                                            theComponent = new ViewCellView.MyRenderer()
+                                                    .getRendererComponent((View) theItem);
+                                        }
+                                        Dimension theSize = theComponent.getPreferredSize();
+
+                                        String theLocation = xoffset + ":" + yoffset;
+                                        theItem.getProperties().setProperty(ModelItem.PROPERTY_LOCATION, theLocation);
+
+                                        maxheight = Math.max(maxheight, theSize.height);
+                                        xoffset += theSize.width + 20;
+
+                                        xcounter++;
+                                        if (xcounter >= getPreferences().getGridWidthAfterReverseEngineering()) {
+                                            xcounter = 0;
+                                            xoffset = 0;
+                                            yoffset += maxheight + 20;
+                                            maxheight = Integer.MIN_VALUE;
+                                        }
+                                    }
 
                                     return theModel;
                                 }
